# ffmpeg_HDF5_filter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  Test.md  VERSIONING.md  env.yml  example.sh  pyproject.toml  setup.py
.github/workflows/: build-plugin.yml  build_project.yml
cmake/: linux.cmake  macos.cmake  windows.cmake
demo_data/: first-instar-brain.h5  first-instar-brain.tif
doc/: install_ffmpeg.md  install_hdf5plugin.md
docs/: _config.yml  index.md  reference.md  search.html
docs/Parameters-API/: decoding.md  encoding.md  index.md  preset.md  tune.md
docs/Programming-Examples/: c demo.md  c++ demo.md  java demo.md  python demo.md
examples/: 16bit.ipynb  32bit.ipynb  8bit.ipynb  filmgrain_stat.ipynb
h5ffmpeg/: __init__.py  _ffmpeg_filter.c  anm.py  anm_legacy.py  constants.py  ffmpeg_filter.py  gpu_utils.py  patches.py  utils.py
imagej-hdf5-encoder/: README.md  build.gradle
imagej-hdf5-encoder/src/main/java/com/cailab/hdf5compression/: Constants.java  MainWindow.java
imagej-hdf5-encoder/src/main/resources/: plugins.config
imagej-hdf5-viewer/: Readme.md  build.gradle
imagej-hdf5-viewer/src/main/java/ch/psi/imagej/hdf5/: HDF5Reader.java  SelectionPanel.java  VirtualStackHDF5.java
imagej-hdf5-wrapper/: build.gradle  gradlew
imagej-hdf5-wrapper/src/main/java/ch/psi/imagej/hdf5/: BufferVirtualStackGUI.java  BufferedVirtualStack.java  DatasetSelection.java  HDF5Reader.java  HDF5Utilities.java  HDF5Writer.java  SelectionPanel.java  VirtualStackHDF5.java
imagej-hdf5-wrapper/src/main/java/com/cailab/hdf5/: NativeLibraryLoader.java
imagej-hdf5-wrapper/src/main/java/com/cailab/hdf5compression/: CompressThread.java  MainWindow.form  MainWindow.java
imagej-hdf5-wrapper/src/main/java/hdf/hdf5lib/: CMakeLists.txt  H5.java  HDF5Constants.java
imagej-hdf5-wrapper/src/main/resources/: plugins.config
imagej-plugin/: README.md
imagej-plugin/src/main/java/com/cailab/hdf5compression/: CompressThread.java  Constants.java  MainWindow.form  MainWindow.java
python/: benchmark.py  example.py
python/utils/: metric_utils.py
scripts/: build_ffmpeg.sh  build_ffmpeg_win.sh  build_into_hdf5plugin.sh  build_linux.sh  build_macos.sh  build_ubuntu.sh  build_ubuntu_pkg.sh  build_windows.bat  build_windows.ps1  build_windows.sh  compile.sh  compile_ffmpeg.sh  compile_hdf5_filter.sh  ffmpeg_hdf5_install.sh  install_dependencies.sh  install_ffmpeg.sh  prepare_native_libs.sh  recompile_and_run_example.sh  recompile_and_test_codec.sh  setup_macos_fiji.sh
scripts/fiji_marco/: SetUpH5FFMPEG.ijm
src/: decode_video.c  example.c  ffmpeg_h5filter.c  ffmpeg_h5filter.h  ffmpeg_h5plugin.c  ffmpeg_native.c  ffmpeg_utils.c  ffmpeg_utils.h
tests/: colored_test.py  test_basic.py  test_ffmpeg.py  test_integration.py  test_utils.py
